feat: run in a GraalVM native image, with MVEL's reflection metadata, a native CI check and a guide (#426)
Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>